--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,5 +14,23 @@
     {{ content }}
   </main>
 
+  <!-- giscuc 
+<script src="https://giscus.app/client.js"
+        data-repo="skelleng/lifeStack"
+        data-repo-id="R_kgDONFy9Ww"
+        data-category="[ENTER CATEGORY NAME HERE]"
+        data-category-id="[ENTER CATEGORY ID HERE]"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="preferred_color_scheme"
+        data-lang="en"
+        crossorigin="anonymous"
+        async>
+</script> -->
+
+  
 </body>
 </html>
