--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  {% include header.html %}
+  <!--{% include header.html %} -->
 
   <main style="max-width: 800px; margin: 2rem auto; padding: 0 1rem;">
     {{ content }}
