--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body {
-  font-family: "Georgia", "Times New Roman", serif;
-  line-height: 1.75;
+  font-family: Georgia, serif;
   font-size: 18px;
+  line-height: 1.7;
   color: #333;
   background: #fff;
   margin: 0;
@@ -14,8 +14,8 @@ main {
   padding: 0 1.5rem;
 }
 
-h1, h2, h3, h4 {
-  font-family: "Helvetica Neue", Helvetica, sans-serif;
+h1, h2, h3 {
+  font-family: Helvetica, sans-serif;
   font-weight: 600;
   line-height: 1.2;
   color: #111;
@@ -26,22 +26,11 @@ a {
   color: #0077cc;
   text-decoration: none;
 }
-
 a:hover {
   text-decoration: underline;
 }
 
-blockquote {
-  border-left: 4px solid #ddd;
-  padding-left: 1rem;
-  color: #555;
-  font-style: italic;
-  margin: 1.5rem 0;
-}
-
-img {
-  max-width: 100%;
-  display: block;
-  margin: 2rem auto;
-  border-radius: 8px;
+ul {
+  margin-top: 1rem;
+  padding-left: 1.25rem;
 }
