--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,37 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{{ page.title }} | LifeStack</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="{{ '/css/style.css' | relative_url }}">
+  <title>{{ page.title }} | {{ site.title }}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 </head>
 <body>
 
-  <!--{% include header.html %} -->
+  {% include nav.html %}
 
-  <main style="max-width: 800px; margin: 2rem auto; padding: 0 1rem;">
+  <main>
     {{ content }}
   </main>
 
-  <!-- giscuc 
-<script src="https://giscus.app/client.js"
-        data-repo="skelleng/lifeStack"
-        data-repo-id="R_kgDONFy9Ww"
-        data-category="[ENTER CATEGORY NAME HERE]"
-        data-category-id="[ENTER CATEGORY ID HERE]"
-        data-mapping="pathname"
-        data-strict="0"
-        data-reactions-enabled="1"
-        data-emit-metadata="0"
-        data-input-position="bottom"
-        data-theme="preferred_color_scheme"
-        data-lang="en"
-        crossorigin="anonymous"
-        async>
-</script> -->
-
   {% include footer.html %}
-  
+
 </body>
 </html>
