--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <title>{{ page.title }} | {{ site.title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- SEO tag plugin if enabled -->
+  {% seo %}
+
+  <!-- Stylesheet -->
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 </head>
 <body>
