--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
   ...
-  <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 </head>
 <body>
   {% include nav.html %}
@@ -9,3 +10,4 @@
   </main>
   {% include footer.html %}
 </body>
+</html>
