--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  ...
+  <meta charset="UTF-8">
+  <title>{{ page.title }}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 </head>
 <body>
   {% include nav.html %}
-  <main>
-    {{ content }}
-  </main>
+  {{ content }}
   {% include footer.html %}
 </body>
+</html>
