--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,8 +4,9 @@
   </div>
 
   <div class="nav-center">
-    <a href="{{ '/health/' | relative_url }}">Health</a>
-    <a href="{{ '/wealth/' | relative_url }}">Wealth</a>
+    <a href="{{ '/learn/' | relative_url }}">Learn</a>
+    <a href="{{ '/tools/' | relative_url }}">Tools</a>
+    <a href="{{ '/stacks/' | relative_url }}">Stacks</a>
   </div>
 
   <div class="nav-right">
@@ -29,4 +30,3 @@
     if (prefersDark) document.body.classList.add('dark');
   }
 </script>
-
